# learning_Hms

./: .gitignore  CLAUDE.md  Perfect! Your use case is ideal for.txt  config.yaml  error mesages.txt  main.py  pyproject.toml  workflow.txt
.claude/: settings.local.json
notebook/: README.md  color_scale.py  diff_map_files_HI  test1.ipynb  test_images.ipynb
src/wafer_dev_predictor/: app.py
src/wafer_dev_predictor/analysis/: prediction.py
src/wafer_dev_predictor/data/: Database_ZA_ZE.py  color_map.py  color_scale.py  labeled_measurements.parquet  test_wrk.py
